# PlantCareApp

./: .gitignore  CMakeLists.txt  PlantCareStructure.txt  README.md  appicon.rc  plant.h  resources.qrc
.github/workflows/: cmake-multi-platform.yml
assets/styles/: dark.qss  light.qss
include/: cardtemplate.hxx  editwindow.hxx  main.hxx  mainWindow.hxx  plant.hxx  secondWindow.hxx  stylemanager.hxx
src/: cardtemplate.cxx  editwindow.cxx  main.cxx  mainWindow.cxx  mainWindow.ui  plant.cxx  secondWindow.cxx  secondWindow.ui  stylemanager.cxx
ui/: cardtemplate.ui  editwindow.ui  mainWindow.ui  secondWindow.ui
